# pods

./: .gitignore  README.md  evaluate-base.py  pyproject.toml  train.py
config/: test.yaml  train.yaml
open-r1/: exp.sh
results/: Instruct-GSM8K-512-128-16-Run1.json  Instruct-GSM8K-512-128-16-Run10.json  Instruct-GSM8K-512-128-16-Run2.json  Instruct-GSM8K-512-128-16-Run3.json  Instruct-GSM8K-512-128-16-Run4.json  Instruct-GSM8K-512-128-16-Run5.json  Instruct-GSM8K-512-128-16-Run6.json  Instruct-GSM8K-512-128-16-Run7.json  Instruct-GSM8K-512-128-16-Run8.json  Instruct-GSM8K-512-128-16-Run9.json  Instruct-GSM8K-512-16-16-Run1.json  Instruct-GSM8K-512-16-16-Run10.json  Instruct-GSM8K-512-16-16-Run2.json  Instruct-GSM8K-512-16-16-Run3.json  Instruct-GSM8K-512-16-16-Run4.json  Instruct-GSM8K-512-16-16-Run5.json  Instruct-GSM8K-512-16-16-Run6.json  Instruct-GSM8K-512-16-16-Run7.json  Instruct-GSM8K-512-16-16-Run8.json  Instruct-GSM8K-512-16-16-Run9.json  Instruct-GSM8K-512-256-16-Run1.json  Instruct-GSM8K-512-256-16-Run10.json  Instruct-GSM8K-512-256-16-Run2.json  Instruct-GSM8K-512-256-16-Run3.json  Instruct-GSM8K-512-256-16-Run4.json  Instruct-GSM8K-512-256-16-Run5.json  Instruct-GSM8K-512-256-16-Run6.json  Instruct-GSM8K-512-256-16-Run7.json  Instruct-GSM8K-512-256-16-Run8.json  Instruct-GSM8K-512-256-16-Run9.json  Instruct-GSM8K-512-32-16-Run1.json  Instruct-GSM8K-512-32-16-Run10.json  Instruct-GSM8K-512-32-16-Run2.json  Instruct-GSM8K-512-32-16-Run3.json  Instruct-GSM8K-512-32-16-Run4.json  Instruct-GSM8K-512-32-16-Run5.json  Instruct-GSM8K-512-32-16-Run6.json  (+109 more)
(+122 files in other folders)
